docs/versioned_docs/version-0.15.0/api/v2/crm/list-accounts.api.mdx
---
id: list-accounts
title: "List accounts"
description: "List accounts"
sidebar_label: "List accounts"
hide_title: true
hide_table_of_contents: true
api: {"operationId":"listAccounts","tags":["Accounts"],"security":[{"x-api-key":[]}],"parameters":[{"name":"include_raw_data","in":"query","schema":{"type":"boolean","example":true},"description":"Whether to include raw data fetched from the 3rd party provider."},{"name":"read_from_cache","in":"query","schema":{"type":"boolean","example":true},"description":"Whether to read from Supaglue's Managed Destination cache or to read directly from the provider. \n\n\n**NOTE**: `read_from_cache=true` requires you to use the Supaglue Managed Destination and select [Common Objects](https://docs.supaglue.com/platform/common-schemas/overview#configuration) to be synced.\n"},{"name":"modified_after","in":"query","schema":{"type":"string","format":"date-time","example":"2023-02-23T00:00:00.000Z"},"description":"If provided, will only return objects modified after this datetime"},{"name":"page_size","in":"query","schema":{"type":"string","example":"123"},"description":"Number of results to return per page. (Max: 1000)"},{"name":"cursor","in":"query","schema":{"type":"string","example":"cD0yMDIxLTAxLTA2KzAzJTNBMjQlM0E1My40MzQzMjYlMkIwMCUzQTAw"},"description":"The pagination cursor value"},{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true},{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true}],"responses":{"200":{"description":"Paginated Accounts","content":{"application/json":{"schema":{"type":"object","properties":{"pagination":{"type":"object","properties":{"next":{"type":"string","nullable":true,"example":"eyJpZCI6IjQyNTc5ZjczLTg1MjQtNDU3MC05YjY3LWVjYmQ3MDJjNmIxNCIsInJldmVyc2UiOmZhbHNlfQ=="},"previous":{"type":"string","nullable":true,"example":"eyJpZCI6IjBjZDhmYmZkLWU5NmQtNDEwZC05ZjQxLWIwMjU1YjdmNGI4NyIsInJldmVyc2UiOnRydWV9"},"total_count":{"type":"number","example":100}},"required":["next","previous"],"title":"pagination"},"records":{"type":"array","items":{"type":"object","properties":{"addresses":{"type":"array","items":{"type":"object","properties":{"address_type":{"type":"string","enum":["primary","mailing","other","billing","shipping"]},"city":{"type":"string","nullable":true,"example":"San Francisco"},"country":{"type":"string","nullable":true,"example":"USA"},"postal_code":{"type":"string","nullable":true,"example":"94107"},"state":{"type":"string","nullable":true,"example":"CA"},"street_1":{"type":"string","nullable":true,"example":"525 Brannan"},"street_2":{"type":"string","nullable":true,"example":null}},"required":["address_type","city","country","postal_code","state","street_1","street_2"]},"example":[{"address_type":"shipping","city":"San Francisco","country":"US","postal_code":"94107","state":"CA","street_1":"525 Brannan","street_2":null}],"title":"addresses"},"description":{"type":"string","nullable":true,"example":"Integration API"},"id":{"type":"string","example":1234},"industry":{"type":"string","nullable":true,"example":"API's"},"last_activity_at":{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"},"name":{"type":"string","nullable":true,"example":"Sample Customer"},"number_of_employees":{"type":"integer","nullable":true,"example":276000},"owner_id":{"type":"string","nullable":true,"example":"d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69"},"owner":{"type":"object","properties":{"id":{"type":"string","example":54312},"name":{"type":"string","nullable":true,"example":"George Xing"},"email":{"type":"string","nullable":true,"example":"george@supaglue.com"},"is_active":{"type":"boolean","nullable":true},"created_at":{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"},"updated_at":{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"},"is_deleted":{"type":"boolean","example":false},"last_modified_at":{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z"}},"required":["id","name","email","is_active","created_at","updated_at","is_deleted","last_modified_at"],"title":"user"},"phone_numbers":{"type":"array","items":{"type":"object","properties":{"phone_number":{"type":"string","nullable":true,"example":"+14151234567"},"phone_number_type":{"type":"string","enum":["primary","mobile","fax","other"]}},"required":["phone_number","phone_number_type"]},"example":[{"phone_number":"+14151234567","phone_number_type":"primary"}],"title":"phone_numbers"},"lifecycle_stage":{"type":"string","nullable":true,"enum":["subscriber","lead","marketingqualifiedlead","salesqualifiedlead","opportunity","customer","evangelist","other"],"title":"lifecycle_stage"},"website":{"type":"string","nullable":true,"example":"https://supaglue.com/"},"created_at":{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"},"updated_at":{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"},"is_deleted":{"type":"boolean","example":false},"last_modified_at":{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z"}},"required":["addresses","description","id","industry","last_activity_at","name","number_of_employees","owner_id","phone_numbers","website","lifecycle_stage","created_at","updated_at","is_deleted","last_modified_at"],"title":"account"}}},"required":["pagination","records"]}}}}},"description":"List accounts","method":"get","path":"/accounts","servers":[{"url":"https://api.supaglue.io/crm/v2","description":"Supaglue API"}],"securitySchemes":{"x-api-key":{"type":"apiKey","name":"x-api-key","in":"header","description":"API key to allow developers to access the API"}},"info":{"version":"0.15.0","title":"Unified CRM API","contact":{"name":"Supaglue","email":"docs@supaglue.com","url":"https://supaglue.com"},"description":"#### Introduction\n\nWelcome to the Unified API (CRM) documentation. You can use this API to write to multiple third-party providers within the CRM category.\n\n[View common schema for CRM](https://docs.supaglue.com/platform/common-schemas/crm)\n\n[![Run in Postman](https://run.pstmn.io/button.svg)](https://www.postman.com/supaglue/workspace/supaglue-public/overview)\n\n#### Base API URL\n```\nhttps://api.supaglue.io/crm/v2\n```\n"},"postman":{"name":"List accounts","description":{"type":"text/plain"},"url":{"path":["accounts"],"host":["{{baseUrl}}"],"query":[{"disabled":false,"description":{"content":"Whether to include raw data fetched from the 3rd party provider.","type":"text/plain"},"key":"include_raw_data","value":""},{"disabled":false,"description":{"content":"Whether to read from Supaglue's Managed Destination cache or to read directly from the provider. \n\n\n**NOTE**: `read_from_cache=true` requires you to use the Supaglue Managed Destination and select [Common Objects](https://docs.supaglue.com/platform/common-schemas/overview#configuration) to be synced.\n","type":"text/plain"},"key":"read_from_cache","value":""},{"disabled":false,"description":{"content":"If provided, will only return objects modified after this datetime","type":"text/plain"},"key":"modified_after","value":""},{"disabled":false,"description":{"content":"Number of results to return per page. (Max: 1000)","type":"text/plain"},"key":"page_size","value":""},{"disabled":false,"description":{"content":"The pagination cursor value","type":"text/plain"},"key":"cursor","value":""}],"variable":[]},"header":[{"disabled":false,"description":{"content":"(Required) The customer ID that uniquely identifies the customer in your application","type":"text/plain"},"key":"x-customer-id","value":""},{"disabled":false,"description":{"content":"(Required) The provider name","type":"text/plain"},"key":"x-provider-name","value":""},{"key":"Accept","value":"application/json"}],"method":"GET","auth":{"type":"apikey","apikey":[{"type":"any","value":"x-api-key","key":"key"},{"type":"any","value":"<API Key>","key":"value"},{"type":"any","value":"header","key":"in"}]}}}
sidebar_class_name: "get api-method"
info_path: api/v2/crm/unified-crm-api
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import MethodEndpoint from "@theme/ApiDemoPanel/MethodEndpoint";
import SecuritySchemes from "@theme/ApiDemoPanel/SecuritySchemes";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";

<h1 className={"openapi__heading"}>List accounts</h1>

<MethodEndpoint method={"get"} path={"/accounts"}></MethodEndpoint>

<SecuritySchemes infoPath={"api/v2/crm/unified-crm-api"}></SecuritySchemes>



List accounts

## Request

<details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Query Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"include_raw_data","in":"query","schema":{"type":"boolean","example":true},"description":"Whether to include raw data fetched from the 3rd party provider."}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"read_from_cache","in":"query","schema":{"type":"boolean","example":true},"description":"Whether to read from Supaglue's Managed Destination cache or to read directly from the provider. \n\n\n**NOTE**: `read_from_cache=true` requires you to use the Supaglue Managed Destination and select [Common Objects](https://docs.supaglue.com/platform/common-schemas/overview#configuration) to be synced.\n"}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"modified_after","in":"query","schema":{"type":"string","format":"date-time","example":"2023-02-23T00:00:00.000Z"},"description":"If provided, will only return objects modified after this datetime"}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"page_size","in":"query","schema":{"type":"string","example":"123"},"description":"Number of results to return per page. (Max: 1000)"}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"cursor","in":"query","schema":{"type":"string","example":"cD0yMDIxLTAxLTA2KzAzJTNBMjQlM0E1My40MzQzMjYlMkIwMCUzQTAw"},"description":"The pagination cursor value"}}></ParamsItem></ul></div></details><details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Header Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true}}></ParamsItem></ul></div></details><div><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

Paginated Accounts

</div><div><MimeTabs className={"openapi-tabs__mime"} schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs className={"openapi-tabs__schema"}><TabItem label={"Schema"} value={"Schema"}><details style={{}} className={"openapi-markdown__details response"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-response"}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>pagination</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"next"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"eyJpZCI6IjQyNTc5ZjczLTg1MjQtNDU3MC05YjY3LWVjYmQ3MDJjNmIxNCIsInJldmVyc2UiOmZhbHNlfQ=="}}></SchemaItem><SchemaItem collapsible={false} name={"previous"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"eyJpZCI6IjBjZDhmYmZkLWU5NmQtNDEwZC05ZjQxLWIwMjU1YjdmNGI4NyIsInJldmVyc2UiOnRydWV9"}}></SchemaItem><SchemaItem collapsible={false} name={"total_count"} required={false} schemaName={"number"} qualifierMessage={undefined} schema={{"type":"number","example":100}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>records</strong><span className={"openapi-schema__name"}> object[]</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>addresses</strong><span className={"openapi-schema__name"}> object[]</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"address_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `mailing`, `other`, `billing`, `shipping`]"} schema={{"type":"string","enum":["primary","mailing","other","billing","shipping"]}}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"San Francisco"}}></SchemaItem><SchemaItem collapsible={false} name={"country"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"USA"}}></SchemaItem><SchemaItem collapsible={false} name={"postal_code"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"94107"}}></SchemaItem><SchemaItem collapsible={false} name={"state"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"CA"}}></SchemaItem><SchemaItem collapsible={false} name={"street_1"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"525 Brannan"}}></SchemaItem><SchemaItem collapsible={false} name={"street_2"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":null}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={false} name={"description"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"Integration API"}}></SchemaItem><SchemaItem collapsible={false} name={"id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":1234}}></SchemaItem><SchemaItem collapsible={false} name={"industry"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"API's"}}></SchemaItem><SchemaItem collapsible={false} name={"last_activity_at"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"}}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"Sample Customer"}}></SchemaItem><SchemaItem collapsible={false} name={"number_of_employees"} required={true} schemaName={"integer"} qualifierMessage={undefined} schema={{"type":"integer","nullable":true,"example":276000}}></SchemaItem><SchemaItem collapsible={false} name={"owner_id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>owner</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":54312}}></SchemaItem><SchemaItem collapsible={false} name={"name"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"George Xing"}}></SchemaItem><SchemaItem collapsible={false} name={"email"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"george@supaglue.com"}}></SchemaItem><SchemaItem collapsible={false} name={"is_active"} required={true} schemaName={"boolean"} qualifierMessage={undefined} schema={{"type":"boolean","nullable":true}}></SchemaItem><SchemaItem collapsible={false} name={"created_at"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"}}></SchemaItem><SchemaItem collapsible={false} name={"updated_at"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"}}></SchemaItem><SchemaItem collapsible={false} name={"is_deleted"} required={true} schemaName={"boolean"} qualifierMessage={undefined} schema={{"type":"boolean","example":false}}></SchemaItem><SchemaItem collapsible={false} name={"last_modified_at"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>phone_numbers</strong><span className={"openapi-schema__name"}> object[]</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"phone_number"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"+14151234567"}}></SchemaItem><SchemaItem collapsible={false} name={"phone_number_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `mobile`, `fax`, `other`]"} schema={{"type":"string","enum":["primary","mobile","fax","other"]}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={false} name={"lifecycle_stage"} required={true} schemaName={"lifecycle_stage"} qualifierMessage={"**Possible values:** [`subscriber`, `lead`, `marketingqualifiedlead`, `salesqualifiedlead`, `opportunity`, `customer`, `evangelist`, `other`]"} schema={{"type":"string","nullable":true,"enum":["subscriber","lead","marketingqualifiedlead","salesqualifiedlead","opportunity","customer","evangelist","other"],"title":"lifecycle_stage"}}></SchemaItem><SchemaItem collapsible={false} name={"website"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"https://supaglue.com/"}}></SchemaItem><SchemaItem collapsible={false} name={"created_at"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"}}></SchemaItem><SchemaItem collapsible={false} name={"updated_at"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"format":"date-time","example":"2022-02-27T00:00:00Z"}}></SchemaItem><SchemaItem collapsible={false} name={"is_deleted"} required={true} schemaName={"boolean"} qualifierMessage={undefined} schema={{"type":"boolean","example":false}}></SchemaItem><SchemaItem collapsible={false} name={"last_modified_at"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"pagination\": {\n    \"next\": \"eyJpZCI6IjQyNTc5ZjczLTg1MjQtNDU3MC05YjY3LWVjYmQ3MDJjNmIxNCIsInJldmVyc2UiOmZhbHNlfQ==\",\n    \"previous\": \"eyJpZCI6IjBjZDhmYmZkLWU5NmQtNDEwZC05ZjQxLWIwMjU1YjdmNGI4NyIsInJldmVyc2UiOnRydWV9\",\n    \"total_count\": 100\n  },\n  \"records\": [\n    {\n      \"addresses\": [\n        {\n          \"address_type\": \"shipping\",\n          \"city\": \"San Francisco\",\n          \"country\": \"US\",\n          \"postal_code\": \"94107\",\n          \"state\": \"CA\",\n          \"street_1\": \"525 Brannan\",\n          \"street_2\": null\n        }\n      ],\n      \"description\": \"Integration API\",\n      \"id\": 1234,\n      \"industry\": \"API's\",\n      \"last_activity_at\": \"2022-02-27T00:00:00Z\",\n      \"name\": \"Sample Customer\",\n      \"number_of_employees\": 276000,\n      \"owner_id\": \"d8ceb3ff-8b7f-4fa7-b8de-849292f6ca69\",\n      \"owner\": {\n        \"id\": 54312,\n        \"name\": \"George Xing\",\n        \"email\": \"george@supaglue.com\",\n        \"is_active\": true,\n        \"created_at\": \"2022-02-27T00:00:00Z\",\n        \"updated_at\": \"2022-02-27T00:00:00Z\",\n        \"is_deleted\": false,\n        \"last_modified_at\": \"2022-02-27T00:00:00Z\"\n      },\n      \"phone_numbers\": [\n        {\n          \"phone_number\": \"+14151234567\",\n          \"phone_number_type\": \"primary\"\n        }\n      ],\n      \"lifecycle_stage\": \"subscriber\",\n      \"website\": \"https://supaglue.com/\",\n      \"created_at\": \"2022-02-27T00:00:00Z\",\n      \"updated_at\": \"2022-02-27T00:00:00Z\",\n      \"is_deleted\": false,\n      \"last_modified_at\": \"2022-02-27T00:00:00Z\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div></div>
      
